@@ -23,6 +23,7 @@
 #include "cairo-support.h"
 #include "support.h"
 #include "murrine_types.h"
+#include "raico-blur.h"
 
 G_GNUC_INTERNAL void
 murrine_rgb_to_hls (gdouble *r,
@@ -672,6 +673,34 @@ murrine_draw_top_glow (cairo_t *cr,
 }
 
 static void
+murrine_draw_blur_glow (cairo_t *cr,
+                        const MurrineRGB *glow,
+                        int x, int y, int width, int height,
+                        int roundness, uint8 corners)
+{
+	raico_blur_t* blur = NULL;
+	cairo_t *cr_surface; 
+	cairo_surface_t *surface;
+	double bradius = 6;
+
+	/* draw glow */
+	surface = cairo_image_surface_create (CAIRO_FORMAT_ARGB32, width+bradius*2, height+bradius*2);
+	cr_surface = cairo_create (surface); 
+	blur = raico_blur_create (RAICO_BLUR_QUALITY_LOW);
+	raico_blur_set_radius (blur, bradius);
+	cairo_set_line_width (cr_surface, 4.0);
+	murrine_rounded_rectangle_closed (cr_surface, bradius, bradius, width, height, roundness, corners);
+	murrine_set_color_rgb (cr_surface, glow);
+	cairo_stroke (cr_surface);
+	raico_blur_apply (blur, surface);
+	cairo_set_source_surface (cr, surface, -bradius+2, -bradius+2); 
+	cairo_paint (cr);
+	cairo_surface_destroy (surface); 
+	cairo_destroy (cr_surface); 
+}
+
+
+static void
 murrine_draw_lightborder (cairo_t *cr,
                           const MurrineRGB *fill,
                           MurrineGradients mrn_gradient,
@@ -838,6 +867,9 @@ murrine_draw_glaze (cairo_t *cr,
 				break;
 			case 4:
 				murrine_draw_centered_glow (cr, &glow, x, y, width, height);
+				break;
+			case 5:
+				murrine_draw_blur_glow (cr, &glow, x, y, width, height, radius, corners);
 				break;
 		}
 	}
