@@ -44,6 +44,7 @@ Changes in this release:
               the border of the trough of GtkScrollbar and GtkProgressBar.
 - New option: trough_shades = { 1.0, 1.0 } to draw a gradient on
               the trough of GtkScrollbar and GtkProgressBar.
+- Changed option: glowstyle = 5 for a glow around the edges.
 - Changed option: listviewstyle = 2 for a solid line.
 - Changed option: menustyle = 2 for glow on the sides of the menu.
 - Changed option: reliefstyle = 3 for a gradient on shadow.
